# dnf5

dnf5/: CMakeLists.txt
include/libdnf/conf/: config_main.hpp
include/libdnf/repo/: config_repo.hpp
include/libdnf5/conf/: config_main.hpp  const.hpp
include/libdnf5/repo/: config_repo.hpp
libdnf/: CMakeLists.txt
libdnf-plugins/dbpath/: dbpath.cpp
libdnf/base/: transaction.cpp
libdnf/conf/: config_main.cpp
libdnf/repo/: config_repo.cpp
libdnf/rpm/: transaction.cpp
libdnf/utils/: xdg.cpp
libdnf5-plugins/: CMakeLists.txt
libdnf5-plugins/dbpath/: CMakeLists.txt  dbpath.cpp
libdnf5/base/: transaction.cpp
libdnf5/common/: xdg.cpp
libdnf5/conf/: config_main.cpp
libdnf5/repo/: config_repo.cpp
libdnf5/rpm/: transaction.cpp
